--- a/npcs/kablam.yaml
+++ b/npcs/kablam.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: adolescent
+    age: Adolescent
 
     #
     # Races (case insensitive):
@@ -215,7 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Pickpocket / Forger / Spy
+    - Pickpocket, Forger, Spy
 
     #
     # D & D classes (case insensitive):
@@ -328,6 +328,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: a_thieve_s_assassin_s_guild
       name: A Thieve's/Assassin's Guild
 
@@ -457,37 +458,66 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Kenku Abilities:
-      - Expert Forgery: Can duplicate other creatures' handwriting and craftwork. You have advantage on all checks made to produce forgeries or duplicates of existing objects.
-        Mimicry: can mimic sounds you have heard, including voices. A creature that hears the sounds you make can tell they are imitations with a successful Wisdom (Insight) check opposed by your Charisma (Deception) check.
-        Kenku Curse: Can read and write any language they can learn, but can only use the Mimicry ability to speak.
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creature.
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-      Arcane Trickster Abilities:
-      - Spellcasting: 
-        - Description: DC 13
-          Cantrips: Mage Hand, Thaumaturgy, Minor Illusion
-          1st Level: Illusory Script, Silent Image, Disguise Self
-        Mage Hand Legerdemain:
-        - Description: when you cast Mage Hand, you can make the spectral hand invisible, and you can perform the following additional tasks with it -
-          Additional Information: 
-          - You can stow one object the hand is holding in a container worn or carried by another creature.
-          - You can retrieve an object in a container worn or carried by another creature.
-          - You can use thieves' tools to pick locks and disarm traps at range.
-          - You can perform one of these tasks without being noticed by a creature if you succeed on a Dexterity (Sleight of Hand) check contested by the creature's Wisdom (Perception) check. In addition, you can use the bonus
-            action granted by your Cunning Action to control the hand
-
-    special-abilities:
-       Proficient in Stealth, Sleight-of-Hand, Deception, Thieve's Tools and Forgery Kit
-    attacks: |
-      1 attack with claws or dagger
-    combat-tactics: |
-      She'll fight with her dagger if cornerd, but will generally try to run first
-    special-equipment:
+    saving-throws:
+    - Dexterity
+    - Wisdom
+    - Charisma
+    damage-immunities:
     - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
+    skills:
+    - Forgery
+    proficiencies:
+    - Stealth
+    - Perception
+    - Deception    
+    - Sleight-of-Hand
+    - Theive's Tools
+    - Forgery Kit
+  special-abilities:
+  - title: Kenku Abilities
+  - abilities: 
+    - title: Expert Forgery
+    - content: Can duplicate other creatures' handwriting and craftwork. You have advantage on all checks made to produce forgeries or duplicates of existing objects         
+    - title: Kenku Training
+    - content: Proficient in your choice of two of the following skills; Acrobatics, Deception, Stealth, and Sleight of Hand. 
+    - title: Mimicry
+    - content: Can mimic sounds you have heard, including voices. A creature that hears the sounds you make can tell they are imitations with a successful Wisdom (Insight) check opposed by your Charisma (Deception) check
+    - title: Kenku Curse
+    - content: Can read and write any language they can learn, but can only use the Mimicry ability to speak
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+  - title: Arcane Trickster Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content: 13
+    - title: Cantrips
+    - content: Mage Hand, Thaumaturgy, Minor Illusion
+    - title: 1st Level
+    - content: Illusory Script, Silent Image, Disguise Self
+    - title: Mage Hand Legerdemain
+    - content: When you cast Mage Hand, you can make the spectral hand invisible, and you can perform the following additional tasks with it;
+               You can stow one object the hand is holding in a container worn or carried by another creature.
+               You can retrieve an object in a container worn or carried by another creature.
+               You can use thieves' tools to pick locks and disarm traps at range.
+               You can perform one of these tasks without being noticed by a creature if you succeed on a Dexterity (Sleight of Hand) check contested by the creature's Wisdom (Perception) check. In addition, you
+               can use the bonus action granted by your Cunning Action to control the hand.
+
+  - title: Attacks
+  - content: 1 attack with claws or dagger
+  - title: Combat Tactics
+  - content: She'll fight with her dagger if cornerd, but will generally try to run first
 
   profile:
 
