--- a/npcs/kaz_lamosatzi.yaml
+++ b/npcs/kaz_lamosatzi.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Hill
+    sub-race: Rock
 
     #
     # Pronouns (case insensitive):
@@ -332,8 +332,9 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: hill_gnome_inventors_guild
-      name: Hill Gnome Inventors Guild
+      name: Rock Gnome Inventors Guild
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -464,47 +465,108 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Wisdom
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Magic
     skills:
-    - Rock Gnome Abilities:
-        - Gnome Cunning: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
-        - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-        - Artificers Lore: Whenever making an History check related to magic items, alchemical objects and technological devices, add twice your proficiency bonus 
-        - Tinker: Proficiency with Tinker's Tools, can create clockwork divice with 1hr and 10gp worth of material - Clockwork Toy, Fire Starter, Music Box
-        
-    - Artificer Abilities:
-       - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 14 
-         Cantrip: Mage Hand, Mending
-         1st Level: Absorb Elements, Detect Magic, Grease, Disguise Self
-         2nd Level: Heat Metal, Continuous Flame
-       - Infuse Item: Imbue 2 mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
-       - Infusions Known: 4 -  Homunculus Servant, Replicate Magic Weapon, Mind Sharpener, Enhanced Arcane Focus      
-       - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
+    - Leatherworking
+    proficiencies:
+    - History
+    - Perception
+    - Investigation    
+    - Survival
+    - Persuasion
+    - Woodcarver's Tools
+  special-abilities:
+  - title: Rock Gnome Abilities
+  - abilities: 
+    - title: Gnome Cunning
+    - content: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+    - title: Artificers Lore
+    - content: Whenever you make an Intelligence (History) check related to magical, alchemical, or technological items, you can add twice your proficiency bonus instead of any other proficiency bonus that may apply
+    - title: Tinker
+    - content: You have proficiency with artisan tools (tinker's tools). Using those tools, you can spend 1 hour and 10 gp worth of materials to construct a Tiny clockwork device (AC 5, 1 hp). The device ceases to function
+               after 24 hours (unless you spend 1 hour repairing it to keep the device functioning), or when you use your action to dismantle it; at that time, you can reclaim the materials used to create it. You can have up
+               to three such devices active at a time. When you create a device, choose one of the following options - 
+               Clockwork Toy - This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
+                               a random direction. It makes noises as appropriate to the creature it represents.
+               Fire Starter - The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
+               Music Box - When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.
+  - title: Artificer Abilities
+  - abilities:
+    - title: Magical Tinkering
+    - content: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
+    - title: Artificer Spellcasting 
+    - content: Requires Tinker's Tools as Spellcasting focus
+    - title: Spell DC
+    - content: 14  
+    - title: Cantrip
+    - content: Mage Hand, Mending
+    - title: 1st Level
+    - content: Absorb Elements, Detect Magic, Grease, Disguise Self
+    - title: 2nd Level
+    - content: Heat Metal, Continuous Flame
+    - title: Infuse Item
+    - content: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
+    - title: Infusions Known
+    - content: 4
+    - title: The Right Tool for the Job
+    - content: Can produce any set of artisan's tools with 1 hour work
+  - title: Artillerist Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content:
+    - title: 3rd Level
+    - content: Shield, Thunderwave
+    - title: 5th Level
+    - content: Scortching Ray, Shatter
+    - title: Tool Proficiency
+    - contnet: You gain proficiency with woodcarver's tools. If you already have this proficiency, you gain proficiency with one other type of artisan's tools of your choice
+    - title: Eldritch Cannon
+    - content: You've learned how to create a magical cannon. Using woodcarver's tools or smith's tools, you can take an action to magically create a Small or Tiny eldritch cannon in an unoccupied space on a 
+               horizontal surface within 5 feet of you. A Small eldritch cannon occupies its space, and a Tiny one can be held in one hand. Once you create a cannon, you can't do so again until you finish a long rest
+               or until you expend a spell slot to create one. You can have only one cannon at a time and can't create one while your cannon is present. The cannon is a magical object. Regardless of size, the cannon 
+               has an AC of 18 and a number of hit points equal to five times your artificer level. It is immune to poison damage and psychic damage. If it is forced to make an ability check or a saving throw, treat 
+               all its ability scores as 10 (+0). If the mending spell is cast on it, it regains 2d6 hit points. It disappears if it is reduced to 0 hit points or after 1 hour. You can dismiss it early as an action. 
+               When you create the cannon, you determine its appearance and whether it has legs. You also decide which type it is, choosing from the options on the Eldritch Cannons table. On each of your turns, you 
+               can take a bonus action to cause the cannon to activate if you are within 60 feet of it. As part of the same bonus action, you can direct the cannon to walk or climb up to 15 feet to an unoccupied space,
+               provided it has legs.
+               Flamethrower - The cannon exhales fire in an adjacent 15-foot cone that you designate. Each creature in that area must make a Dexterity saving throw against your spell save DC, taking 2d8 fire damage
+                              on a failed save or half as much damage on a successful one. The fire ignites any flammable objects in the area that aren't being worn or carried.
+               Force Ballista-  Make a ranged spell attack, originating from the cannon, at one creature or object within 120 feet of it. On a hit, the target takes 2d8 force damage, and if the target is a creature, 
+                                it is pushed up to 5 feet away from the cannon.
+               Protector - The cannon emits a burst of positive energy that grants itself and each creature of your choice within 10 feet of it a number of temporary hit points equal to 1d8 + your Intelligence 
+                           modifier (minimum of +1).           
+    - title: Arcane Firearm
+    - content: You know how to turn a wand, staff, or rod into an arcane firearm, a conduit for your destructive spells. When you finish a long rest, you can use woodcarver's tools to carve special sigils into a wand, 
+               staff, or rod and thereby turn it into your arcane firearm. The sigils disappear from the object if you later carve them on a different item. The sigils otherwise last indefinitely. You can use your 
+               arcane firearm as a spellcasting focus for your artificer spells. When you cast an artificer spell through the firearm, roll a d8, and you gain a bonus to one of the spell's damage rolls equal to the 
+               number rolled.
        
-    - Artillerist Abilities:
-       - Tool Proficiency: Proficient in Woodcarver's Tools
-       - Artillerist Spells:
-         3rd Level: Shield, Thunderwave
-         5th Level: Scortching Ray, Shatter
-       - Eldritch Cannon: Force Ballista - Steam Gun - Make a ranged spell attack, originating from the cannon, at one creature or object within 120 feet of it. On a hit, the target takes 2d8 force damage, and if the target is a creature,
-                                           it is pushed up to 5 feet away from the cannon
-       - Arcane Firearm: You know how to turn a wand, staff, or rod into an arcane firearm, a conduit for your destructive spells. When you finish a long rest, you can use woodcarver's tools to carve special sigils into a wand,
-                         staff, or rod and thereby turn it into your arcane firearm. The sigils disappear from the object if you later carve them on a different item. The sigils otherwise last indefinitely. You can use your
-                         arcane firearm as a spellcasting focus for your artificer spells. When you cast an artificer spell through the firearm, roll a d8, and you gain a bonus to one of the spell's damage rolls equal to the
-                         number rolled
-           
-    special-abilities:
-       - Proficiecies: Persuasion, History, Investigation, Survival, Woodcarver's Tools
-       - Feats: N/A 
-       
-    attacks: |
-      1 attacks with Steam Gun or Chain Whip
-    combat-tactics: |
-      Kaz will dance about at distance using his steam gun or dart in and out of range attacking with his Chain Whip. He's giddy and his glee frustrating to opponents
-    special-equipment:
-    - Steam Gun: Artillerist Force Ballista
-    - Chain Whip: 1d6 Slashing
-    - Spring wired steam chicken & Spring wired steam squirre
+  - title: Attacks
+  - content: 1 attacks with Steam Gun or Chain Whip
+  - title: Combat Tactics
+  - content: Kaz will dance about at distance using his steam gun or dart in and out of range attacking with his Chain Whip. He's giddy and his glee frustrating to opponents
+
+  - title: Special Equipment
+  - abilities:
+    - title: Steam Gun
+    - content: Artillerist Force Ballista
+    - title: Chain Whip
+    - content: 1d6 Slashing
+    - title: Clockwork Toys
+    - content: Spring wired steam chicken & Spring wired steam squirrel
                                                                    
   profile:
 
