--- a/npcs/khedoldosh_the_lost.yaml
+++ b/npcs/khedoldosh_the_lost.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Beholder
+    race: Beholderkin
 
     #
     # The sub-race can be anything.
@@ -463,35 +463,78 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Wisdom
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Frightened, Charmed, Poisoned, Stunned
+    resistances:
+    - N/A
     skills:
-    - Beholder Abilities:
-      - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
-        Bite: Melee Weapon Attack. +2 to hit, reach 5 ft., one target. Hit - 8 (2d6) piercing damage.
-        Antimagic Cone: Khedoldosh's central eye creates an area of antimagic, as in the antimagic field spell, in a 50-foot cone. At the start of each of its turns, Khedoldosh decides which way the cone faces and whether the cone is active. The area works against Khedoldosh's own eye rays.
-        Eye Rays:
-        - Fear Ray: The targeted creature must succeed on a DC 12 Wisdom saving throw or be frightened for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself on a
-                    success.
-          Telekinetic Ray: If the target is a creature, it must succeed on a DC 12 Strength saving throw or Khedoldosh moves it up to 30 ft. in any direction. It is restrained by the ray's telekinetic grip until the start of
-                           Khedoldosh's next turn or until the beholder is incapacitated. If the target is an object weighing 300 pounds or less that isn't being worn or carried, it is moved up to 30 ft. in any direction.
-                           Khedoldosh can also exert fine control on objects with this ray, such as manipulating a simple tool or opening a door or a container.
-          Charm Ray: The targeted creature must succeed on a DC 16 Wisdom saving throw or be charmed by Khedoldosh for 1 hour, or until Khedoldosh harms the creature.
+    - Fortune-Telling
+    proficiencies:
+    - Arcana
+    - Insight
+    - History    
+    - Perception
+    - Persuasion
+    - Tarokka Cards
+  special-abilities:
+  - title: Beholderkin Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
+    - title: Bite
+    - content: Melee Weapon Attack +2 to hit, reach 5 ft., one target. Hit 8 (2d6) piercing damage.
+    - title: Antimagic Cone
+    - content: The beholder's central eye creates an area of antimagic, as in the antimagic field spell, in a 150-foot cone. At the start of each of its turns, the beholder decides which way the cone faces and whether
+               the cone is active. The area works against the beholder's own eye rays.
+    - title: Eye Rays
+    - content: The beholder shoots three of the following magical eye rays at random (reroll duplicates), choosing one to three targets it can see within 120 ft. of it;
+               Charm Ray - The targeted creature must succeed on a DC 16 Wisdom saving throw or be charmed by the beholder for 1 hour, or until the beholder harms the creature.
+               Paralyzing Ray - The targeted creature must succeed on a DC 16 Constitution saving throw or be paralyzed for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself
+                                on a success.
+               Fear Ray - The targeted creature must succeed on a DC 16 Wisdom saving throw or be frightened for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself on a
+                          success.
+               Slowing Ray - The targeted creature must succeed on a DC 16 Dexterity saving throw. On a failed save, the target's speed is halved for 1 minute. In addition, the creature can't take reactions, and it can take either an
+                             action or a bonus action on its turn, not both. The creature can repeat the saving throw at the end of each of its turns, ending the effect on itself on a success.
+               Enervation Ray - The targeted creature must make a DC 16 Constitution saving throw, taking 36 (8d8) necrotic damage on a failed save, or half as much damage on a successful one.
+               Telekinetic Ray - If the target is a creature, it must succeed on a DC 16 Strength saving throw or the beholder moves it up to 30 ft. in any direction. It is restrained by the ray's telekinetic grip until the start of
+                                 the beholder's next turn or until the beholder is incapacitated. If the target is an object weighing 300 pounds or less that isn't being worn or carried, it is moved up to 30 ft. in any direction. The
+                                 beholder can also exert fine control on objects with this ray, such as manipulating a simple tool or opening a door or a container.
+               Sleep Ray - The targeted creature must succeed on a DC 16 Wisdom saving throw or fall asleep and remain unconscious for 1 minute. The target awakens if it takes damage or another creature takes an action to wake it.
+                           This ray has no effect on constructs and undead.
+               Petrification Ray - The targeted creature must make a DC 16 Dexterity saving throw. On a failed save, the creature begins to turn to stone and is restrained. It must repeat the saving throw at the end of its next turn.
+                                   On a success, the effect ends. On a failure, the creature is petrified until freed by the greater restoration spell or other magic.
+               Disintegration Ray - If the target is a creature, it must succeed on a DC 16 Dexterity saving throw or take 45 (10d8) force damage. If this damage reduces the creature to 0 hit points, its body becomes a pile of fine
+                                    gray dust. If the target is a Large or smaller nonmagical object or creation of magical force, it is disintegrated without a saving throw. If the target is a Huge or larger object or creation of
+                                    magical force, this ray disintegrates a 10-foot cube of it.
+               Death Ray - The targeted creature must succeed on a DC 16 Dexterity saving throw or take 55 (10d10) necrotic damage. The target dies if the ray reduces it to 0 hit points.
+  - title: Legendary Resistance
+  - content: (2/Day), If Khedoldosh The Lost fails a saving throw they can choose to succeed instead
+  - title: Legendary Actions
+  - content: Khedoldosh The Lost can take 1 Legendary Action. Choosing from the options below. Only one Legendary Action can be used at a time and only at the end of another creature's turn. Khedoldosh The Lost regains spent 
+             Legendary Actions at the start of their turn
+  - abilities:
+    - title: Eye Rays
+    - content: Khedoldosh The Lost uses one random eye ray.
+  - title: Feats
+  - content: Keen Mind, Observant, Telekinetic 
+  - title: Attacks
+  - content: 2 attacks with Eye Rays
+  - title: Combat Tactics
+  - content: Kedoldosh will largely avoid combat unless pressed. If pressed, it will doff it's disguise and take to flight. If cornered, it will use its eye rays.
 
-    special-abilities:
-    - Proficiecies: Insight, History, Arcana, Persuasion, Perception
-      Feats: Keen Mind, Observant, Telekinetic 
-      Legendary Resistance: (2/Day), If Khedoldosh The Lost fails a saving throw they can choose to succeed instead
-      Legendary Actions:
-      - Description: Khedoldosh The Lost can take 1 Legendary Action. Choosing from the options below. Only one Legendary Action can be used at a time and only at the end of another creature's turn. Khedoldosh The Lost regains spent Legendary Actions at the start of their turn
-        Eye Rays: Khedoldosh The Lost uses one random eye ray.
-    attacks: |
-      2 attacks with Eye Rays
-    combat-tactics: |
-      Kedoldosh will largely avoid combat unless pressed. If pressed, it will doff it's disguise and take to flight. If cornered, it will use its eye rays.
-    special-equipment:
-    - Tarokka deck: has fifty-four cards, each of which has its own name. Forty of them comprise the common deck, which is divided into four suits - swords, coins, stars, and glyphs. Each suit contains cards numbered one
-                    through nine, plus a tenth card that is called the master of that suit. A card can be referred to by its suit designation or by its name. For instance, the three of glyphs is also known as the healer, and
-                    the wizard card is also known as the master of stars. The remaining fourteen cards make up the high deck, which symbolizes the natural forces of the multiverse. These cards are represented by a crown symbol
-                    and are the most powerful cards in the deck
+  - title: Special Equipment
+  - abilities:
+    - title: Tarokka Deck
+    - content: This deal has fifty-four cards, each of which has its own name. Forty of them comprise the common deck, which is divided into four suits - swords, coins, stars, and glyphs. Each suit contains cards numbered one
+               through nine, plus a tenth card that is called the master of that suit. A card can be referred to by its suit designation or by its name. For instance, the three of glyphs is also known as the healer, and
+               the wizard card is also known as the master of stars. The remaining fourteen cards make up the high deck, which symbolizes the natural forces of the multiverse. These cards are represented by a crown symbol
+               and are the most powerful cards in the deck
 
   profile:
 
