--- a/npcs/king_leon_goldmane.yaml
+++ b/npcs/king_leon_goldmane.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: human
+    race: Human
 
     #
     # The sub-race can be anything.
@@ -329,8 +329,9 @@ npc:
     #
     # Optional.  0 or more.
     #
-    - id: _the_country_
-      name: (The country)
+    factions:
+    - id: noble_house
+      name: Noble House
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -458,42 +459,125 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Strength
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Fighter Abilities:
-      - Fighting Style: Defense
-        Second Wind: Bonus Action to regain 1d10 + 20
-        Action Surge: Twice every short/long rest can take an extra action
-        Extra Attack: Can attack 4 times each turn
-        Indomitable: you can reroll a saving throw that you fail. If you do so, you must use the new roll, and you can use this feature 3 times per Long Rest.  
-      Battle Master Abilities:
-      - Combat Superiority:
-        - Maneuvers: Knows any 9 Maneuvers 
-          Superiority Dice: You have 6 superiority dice, which are d12s. A superiority die is expended when you use it. You regain all of your expended superiority dice when you finish a short or long rest.
-          Saving Throws:
-          - Description: Some of your maneuvers require your target to make a saving throw to resist the maneuver's effects. The saving throw DC 19
-            Student of War: Proficeint with Mason's Tools
-            Know Your Enemy: if you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if the
-                             creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice; Strength score, Dexterity score, Constitution score, Armor Class, Current hit points,
-                             Total class levels, if any, Fighter class levels, if any.
-          Relentless: when you roll initiative and have no superiority dice remaining, you regain 1 superiority die 
+    - Leadership
+    proficiencies:
+    - Survival
+    - Perception
+    - Insight    
+    - Intimidation
+    - Persuasion
+  special-abilities:
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content: Defense - While you are wearing armor, you gain a +1 bonus to AC.
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10 + 20
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+    - title: Indomitable
+    - content: you can reroll a saving throw that you fail. If you do so, you must use the new roll, and you can use this feature 3 times per Long Rest.  
+  - title: Battle Master Abilities
+  - abilities: 
+    - title: Combat Superiority
+    - content: Maneuvers - You learn three maneuvers of your choice. Many maneuvers enhance an attack in some way. You can use only one maneuver per attack. You learn two additional maneuvers of your choice at 7th, 10th, and 15th 
+                           level. Each time you learn new maneuvers, you can also replace one maneuver you know with a different one
+               Ambush - When you make a Dexterity (Stealth) check or an initiative roll, you can expend one superiority die and add the die to the roll, provided you aren't incapacitated.
+               Bait and Switch - When you're within 5 feet of a creature on your turn, you can expend one superiority die and switch places with that creature, provided you spend at least 5 feet of movement and the creature
+                                 is willing and isn't incapacitated. This movement doesn't provoke opportunity attacks. Roll the superiority die. Until the start of your next turn, you or the other creature (your choice) 
+                                 gains a bonus to AC equal to the number rolled.
+               Brace - When a creature you can see moves into the reach you have with the melee weapon you're wielding, you can use your reaction to expend one superiority die and make one attack against the creature, using
+                       that weapon. If the attack hits, add the superiority die to the weapon's damage roll.
+               Commander's Strike - When you take the Attack action on your turn, you can forgo one of your attacks and use a bonus action to direct one of your companions to strike. When you do so, choose a friendly 
+                                    creature who can see or hear you and expend one superiority die. That creature can immediately use its reaction to make one weapon attack, adding the superiority die to the attack's 
+                                    damage roll.
+               Commanding Presence - When you make a Charisma (Intimidation), a Charisma (Performance), or a Charisma (Persuasion) check, you can expend one superiority die and add the superiority die to the ability check.
+               Disarming Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to disarm the target, forcing it to drop one item of your choice that it's holding. You add the 
+                                  superiority die to the attack's damage roll, and the target must make a Strength saving throw. On a failed save, it drops the object you choose. The object lands at its feet.
+               Distracting Strike - When you hit a creature with a weapon attack, you can expend one superiority die to distract the creature, giving your allies an opening. You add the superiority die to the attack's 
+                                    damage roll. The next attack roll against the target by an attacker other than you has advantage if the attack is made before the start of your next turn.
+               Evasive Footwork - When you move, you can expend one superiority die, rolling the die and adding the number rolled to your AC until you stop moving.
+               Feinting Attack - You can expend one superiority die and use a bonus action on your turn to feint, choosing one creature within 5 feet of you as your target. You have advantage on your next attack roll 
+                                 against that creature this turn. If that attack hits, add the superiority die to the attack's damage roll.
+               Goading Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to goad the target into attacking you. You add the superiority die to the attack's damage roll, and
+                                the target must make a Wisdom saving throw. On a failed save, the target has disadvantage on all attack rolls against targets other than you until the end of your next turn.
+               Grappling Strike - Immediately after you hit a creature with a melee attack on your turn, you can expend one superiority die and then try to grapple the target as a bonus action (see the Player's Handbook for
+                                  rules on grappling). Add the superiority die to your Strength (Athletics) check.
+               Lunging Attack - When you make a melee weapon attack on your turn, you can expend one superiority die to increase your reach for that attack by 5 feet. If you hit, you add the superiority die to the attack's 
+                                damage roll.
+               Maneuvering Attack - When you hit a creature with a weapon attack, you can expend one superiority die to maneuver one of your comrades into a more advantageous position. You add the superiority die to the 
+                                    attack's damage roll, and you choose a friendly creature who can see or hear you. That creature can use its reaction to move up to half its speed without provoking opportunity attacks 
+                                    from the target of your attack.
+               Menacing Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to frighten the target. You add the superiority die to the attack's damage roll, and the target 
+                                 must make a Wisdom saving throw. On a failed save, it is frightened of you until the end of your next turn.
+               Parry - When another creature damages you with a melee attack, you can use your reaction and expend one superiority die to reduce the damage by the number you roll on your superiority die + your Dexterity 
+                       modifier.
+               Precision Attack - When you make a weapon attack roll against a creature, you can expend one superiority die to add it to the roll. You can use this maneuver before or after making the attack roll, but before
+                                  any effects of the attack are applied.
+               Pushing Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to drive the target back. You add the superiority die to the attack's damage roll, and if the target
+                                is Large or smaller, it must make a Strength saving throw. On a failed save, you push the target up to 15 feet away from you.
+               Quick Toss - As a bonus action, you can expend one superiority die and make a ranged attack with a weapon that has the thrown property. You can draw the weapon as part of making this attack. If you hit, add 
+                            the superiority die to the weapon's damage roll.
+               Rally - On your turn, you can use a bonus action and expend one superiority die to bolster the resolve of one of your companions. When you do so, choose a friendly creature who can see or hear you. That 
+                       creature gains temporary hit points equal to the superiority die roll + your Charisma modifier.
+               Riposte - When a creature misses you with a melee attack, you can use your reaction and expend one superiority die to make a melee weapon attack against the creature. If you hit, you add the superiority die 
+                         to the attack's damage roll.
+               Sweeping Attack - When you hit a creature with a melee weapon attack, you can expend one superiority die to attempt to damage another creature with the same attack. Choose another creature within 5 feet of 
+                                 the original target and within your reach. If the original attack roll would hit the second creature, it takes damage equal to the number you roll on your superiority die. The damage is of 
+                                 the same type dealt by the original attack.
+               Tactical Assessment - When you make an Intelligence (Investigation), an Intelligence (History), or a Wisdom (Insight) check, you can expend one superiority die and add the superiority die to the ability check.
+               Trip Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to knock the target down. You add the superiority die to the attack's damage roll, and if the target 
+                             is Large or smaller, it must make a Strength saving throw. On a failed save, you knock the target prone.
+    - title: Superiority Dice 6
+    - content: You have four superiority dice, which are d8s. A superiority die is expended when you use it. You regain all of your expended superiority dice when you finish a short or long rest. You gain another 
+               superiority die at 7th level and one more at 15th level.
+    - title: Maneuver DC
+    - content: 19
+    - title: Student of War
+    - content: You gain proficiency with one type of artisan's tools of your choice
+    - title: Know Your Enemy
+    - content: If you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if the 
+               creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice; Strength score, Dexterity score, Constitution score, Armor Class, Current hit points, 
+               Total class levels, if any, Fighter class levels, if any
+    - title: Improves Superiority
+    - content: Your superiority dice turn into d10s. At 18th level, they turn into d12s.
+    - title: Relentless
+    - content: When you roll initiative and have no superiority dice remaining, you regain 1 superiority die 
+  - title: Legendary Resistance
+  - content: (3/Day), If Leon Goldmane fails a saving throw they can choose to succeed instead 
+  - title: Legendary Actions 
+  - content: Leon Goldmane can take 1 Legendary Action. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Leon Goldmane regains
+             spent Legendary Actions at the start of they're turn
+  - abilities:
+    - title: Maneuver
+    - content: Leon Goldmane attacks once with the Kingsblade and uses one maneuver.
 
-    special-abilities:
-    - Proficiecies: Persuasion, Intimidation, Performance, Survival
-      Feats: Great Weapons Master, Inspiring Leader, Mounted Combatant, Athlete 
-      Legendary Resistance: (3/Day), If Leon Goldmane fails a saving throw they can choose to succeed instead 
-      Legendary Actions: 
-      - Description: Leon Goldmane can take 1 Legendary Action. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Leon Goldmane regains
-                     spent Legendary Actions at the start of they're turn
-        Maneuver: Leon Goldmane attacks once with the Kingsblade and uses one maneuver.
+  - title: Feats
+  - content: Great Weapons Master, Inspiring Leader, Mounted Combatant, Athlete
+  - title: Attacks
+  - content: 4 attacks with The Kingsblade
+  - title: Combat Tactics
+  - content: King leon is merciful on the battlefield, choosing to rather incapacitate and imprison his humanoid enemies, rather than killing them. However, when encountering enemies who the king doesn't consider people, he is merciless and a killer.
 
-    attacks: |
-      4 attacks with The Kingsblade
-    combat-tactics: |
-      King leon is merciful on the battlefield, choosing to rather incapacitate and imprison his humanoid enemies, rather than killing them. However, when encountering enemies who the king doesn't consider people, he is merciless and a killer.
-    special-equipment:
-    - The Kingsblade: 
-      - Description: melee weapon attack - +14 to hit, reach 5ft., Hit - (2d6 + 1d8 + 8) - an heirloom passed from king to king. It is a +3 greatsword (technically whoever wields this blade is the king)
-      Plate Armor: +2 mithril plate that he wears underneath his clothes.
+  - title: Special Equipment
+  - abilities:
+    - title: The Kingsblade 
+    - content: melee weapon attack - +14 to hit, reach 5ft., Hit - (2d6 + 1d8 + 8) - an heirloom passed from king to king. It is a +3 greatsword (technically whoever wields this blade is the king)
+    - title: King's Plate Armor
+    - content: +2 Mithril Plate that he wears underneath his clothes.
       
   profile:
 
