--- a/npcs/kraark_of_clan_zizzix.yaml
+++ b/npcs/kraark_of_clan_zizzix.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -330,6 +330,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    faction:
     - id: clan_zizzix
       name: Clan Zizzix
     - id: thieve_s_guild
@@ -462,33 +463,59 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Intelligence
+    - Dexterity
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Goblin Abilities:
-      - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light           
-        Fury of the Small: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals 
-                           your level.
-        Nimble Escape: You can take the Disengage or Hide action as a bonus action on each of your turns. 
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-        Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail              
-      Thief Abilities:
-      - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action 
-        Second Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
-                           your Dexterity modifier
+    - Pick-Pocketing
+    proficiencies:
+    - Stealth
+    - Sleight-of-Hand
+    - Deception    
+    - Investigation
+    - Insight
+    - Thieve's Tools
+  special-abilities:
+  - title: Goblin Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light           
+    - title: Fury of the Small
+    - content: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals 
+               your level.
+    - title: Nimble Escape
+    - content: You can take the Disengage or Hide action as a bonus action on each of your turns.
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail              
+  - title: Thief Abilities
+  - abilities: 
+    - title: Fast Hands
+    - content: You can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
+    - title: Second-Story Work
+    - content: When you choose this archetype at 3rd Level, you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you 
+               cover increases by a number of feet equal to your Dexterity modifier.
 
-    special-abilities:
-       - Proficiecies: Stealth, Sleight of Hand, Investigation, Thieve's Tools
-       - Feats: N/A 
-
-    attacks: |
-      1 attack with dagger, 1 with bite or claw (1d4)
-    combat-tactics: |
-      Will mostly try to run away or beg if possible, but will fight fiercely and savagely if cornered 
-    special-equipment:
-      - Dagger
+  - title: Attacks
+  - content: 1 attack with dagger, 1 with bite or claw (1d4)
+  - title: Combat Tactics
+  - content: Will mostly try to run away or beg if possible, but will fight fiercely and savagely if cornered 
 
   profile:
 
@@ -512,3 +539,5 @@ npc:
     # No length limit for now.
     #
     personality: |
+       Kraark is small and dirty, but quick-witted and cunning. He's good at his job and has only been arrest a few times in a lot of years. He is a cagey little fellow, fast with his hands, fast with a dagger and eternally 
+       untrusting
